Bug 15462 - elf mips build has errors [-Werror=maybe-uninitialized] elfxx-mips.c
Summary: elf mips build has errors [-Werror=maybe-uninitialized] elfxx-mips.c
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.23
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-12 08:34 UTC by Eric Herman
Modified: 2013-05-22 08:40 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
Fixes compile errors from uninitialized variables in bfd/elfxx-mips.c binutils/stabs.c (627 bytes, patch)
2013-05-12 08:34 UTC, Eric Herman
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Herman 2013-05-12 08:34:08 UTC
Created attachment 7024 [details]
Fixes compile errors from uninitialized variables in bfd/elfxx-mips.c binutils/stabs.c

binutils-2.23.2/bfd/elfxx-mips.c:9737:41: error: 'cross_mode_jump_p' may be used uninitialized in this function [-Werror=maybe-uninitialized]

binutils-2.23.2/binutils/stabs.c:2797:57: error: 'physname' may be used uninitialized in this function [-Werror=maybe-uninitialized]

(stabs looks resoved with http://sourceware.org/bugzilla/show_bug.cgi?id=15018 )
Comment 1 Sourceware Commits 2013-05-22 08:39:55 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	amodra@sourceware.org	2013-05-22 08:39:53

Modified files:
	bfd            : ChangeLog elfxx-mips.c 

Log message:
	PR binutils/15462
	* elfxx-mips.c (_bfd_mips_elf_relocate_section): Warning fix.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/bfd/ChangeLog.diff?cvsroot=src&r1=1.6062&r2=1.6063
http://sourceware.org/cgi-bin/cvsweb.cgi/src/bfd/elfxx-mips.c.diff?cvsroot=src&r1=1.353&r2=1.354
Comment 2 Alan Modra 2013-05-22 08:40:28 UTC
Patch applied mainline.