	PR binutils/15462 	* elfxx-mips.c (_bfd_mips_elf_relocate_section): Warning fix.